编译原理实验/实验11/hanshu/py_parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> segment
Rule 1     segment -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> else
Rule 9     statement -> elif
Rule 10    statement -> while
Rule 11    statement -> break
Rule 12    statement -> for
Rule 13    statement -> function
Rule 14    statement -> runFunction
Rule 15    statement -> return
Rule 16    return -> RETURN
Rule 17    return -> RETURN term
Rule 18    function -> DEF VARIABLE ( functionTerms ) { statements }
Rule 19    function -> DEF VARIABLE ( ) { statements }
Rule 20    runFunction -> VARIABLE ( runFunctionTerms )
Rule 21    runFunction -> VARIABLE ( )
Rule 22    runFunctionTerms -> term
Rule 23    runFunctionTerms -> runFunctionTerms , term
Rule 24    functionTerms -> VARIABLE
Rule 25    functionTerms -> functionTerms , VARIABLE
Rule 26    break -> BREAK
Rule 27    while -> WHILE ( condition ) { statements }
Rule 28    for -> FOR ( assignment ; condition ; VARIABLE + + ) { statements }
Rule 29    if -> IF ( condition ) { statements }
Rule 30    else -> ELSE { statements }
Rule 31    elif -> ELIF ( condition ) { statements }
Rule 32    and -> condition AND condition
Rule 33    or -> condition OR condition
Rule 34    condition -> greater
Rule 35    condition -> greater_equal
Rule 36    condition -> less
Rule 37    condition -> less_equal
Rule 38    condition -> equal_equal
Rule 39    condition -> and
Rule 40    condition -> or
Rule 41    greater -> term > term
Rule 42    greater_equal -> term > = term
Rule 43    less -> term < term
Rule 44    less_equal -> term < = term
Rule 45    equal_equal -> term = = term
Rule 46    assignment -> VARIABLE = term
Rule 47    assignment -> VARIABLE = array
Rule 48    assignment -> array_term = term
Rule 49    assignment -> VARIABLE + = term
Rule 50    assignment -> array_term + = term
Rule 51    assignment -> VARIABLE - = term
Rule 52    assignment -> array_term - = term
Rule 53    assignment -> VARIABLE * = term
Rule 54    assignment -> array_term * = term
Rule 55    assignment -> VARIABLE / = term
Rule 56    assignment -> array_term / = term
Rule 57    operation -> ADD
Rule 58    operation -> SUB
Rule 59    operation -> MUL
Rule 60    operation -> DIV
Rule 61    operation -> DIV_ext
Rule 62    operation -> ( operation )
Rule 63    ADD -> term + term
Rule 64    SUB -> term - term
Rule 65    MUL -> term * term
Rule 66    DIV -> term / term
Rule 67    DIV_ext -> term / / term
Rule 68    print -> PRINT ( pcontent )
Rule 69    array_term -> VARIABLE [ term ]
Rule 70    array -> [ pcontent ]
Rule 71    pcontent -> pcontent , term
Rule 72    pcontent -> term
Rule 73    term -> VARIABLE
Rule 74    term -> NUMBER
Rule 75    term -> operation
Rule 76    term -> array_term
Rule 77    term -> len
Rule 78    term -> runFunction
Rule 79    len -> LEN ( VARIABLE )

Terminals, with rules where they appear

(                    : 18 19 20 21 27 28 29 31 62 68 79
)                    : 18 19 20 21 27 28 29 31 62 68 79
*                    : 53 54 65
+                    : 28 28 49 50 63
,                    : 23 25 71
-                    : 51 52 64
/                    : 55 56 66 67 67
;                    : 28 28
<                    : 43 44
=                    : 42 44 45 45 46 47 48 49 50 51 52 53 54 55 56
>                    : 41 42
AND                  : 32
BREAK                : 26
DEF                  : 18 19
ELIF                 : 31
ELSE                 : 30
FOR                  : 28
IF                   : 29
LEN                  : 79
NUMBER               : 74
OR                   : 33
PRINT                : 68
RETURN               : 16 17
VARIABLE             : 18 19 20 21 24 25 28 46 47 49 51 53 55 69 73 79
WHILE                : 27
[                    : 69 70
]                    : 69 70
error                : 
{                    : 18 19 27 28 29 30 31
}                    : 18 19 27 28 29 30 31

Nonterminals, with rules where they appear

ADD                  : 57
DIV                  : 60
DIV_ext              : 61
MUL                  : 59
SUB                  : 58
and                  : 39
array                : 47
array_term           : 48 50 52 54 56 76
assignment           : 4 28
break                : 11
condition            : 27 28 29 31 32 32 33 33
elif                 : 9
else                 : 8
equal_equal          : 38
for                  : 12
function             : 13
functionTerms        : 18 25
greater              : 34
greater_equal        : 35
if                   : 7
len                  : 77
less                 : 36
less_equal           : 37
operation            : 5 62 75
or                   : 40
pcontent             : 68 70 71
print                : 6
return               : 15
runFunction          : 14 78
runFunctionTerms     : 20 23
segment              : 0
statement            : 2 3
statements           : 1 2 18 19 27 28 29 30 31
term                 : 17 22 23 41 41 42 42 43 43 44 44 45 45 46 48 49 50 51 52 53 54 55 56 63 63 64 64 65 65 66 66 67 67 69 71 72
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . segment
    (1) segment -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (46) assignment -> . VARIABLE = term
    (47) assignment -> . VARIABLE = array
    (48) assignment -> . array_term = term
    (49) assignment -> . VARIABLE + = term
    (50) assignment -> . array_term + = term
    (51) assignment -> . VARIABLE - = term
    (52) assignment -> . array_term - = term
    (53) assignment -> . VARIABLE * = term
    (54) assignment -> . array_term * = term
    (55) assignment -> . VARIABLE / = term
    (56) assignment -> . array_term / = term
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (68) print -> . PRINT ( pcontent )
    (29) if -> . IF ( condition ) { statements }
    (30) else -> . ELSE { statements }
    (31) elif -> . ELIF ( condition ) { statements }
    (27) while -> . WHILE ( condition ) { statements }
    (26) break -> . BREAK
    (28) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (18) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (19) function -> . DEF VARIABLE ( ) { statements }
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )
    (16) return -> . RETURN
    (17) return -> . RETURN term
    (69) array_term -> . VARIABLE [ term ]
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (79) len -> . LEN ( VARIABLE )

    VARIABLE        shift and go to state 16
    (               shift and go to state 24
    PRINT           shift and go to state 25
    IF              shift and go to state 26
    ELSE            shift and go to state 27
    ELIF            shift and go to state 28
    WHILE           shift and go to state 29
    BREAK           shift and go to state 30
    FOR             shift and go to state 31
    DEF             shift and go to state 32
    RETURN          shift and go to state 33
    NUMBER          shift and go to state 34
    LEN             shift and go to state 36

    segment                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    function                       shift and go to state 13
    runFunction                    shift and go to state 14
    return                         shift and go to state 15
    term                           shift and go to state 17
    array_term                     shift and go to state 18
    ADD                            shift and go to state 19
    SUB                            shift and go to state 20
    MUL                            shift and go to state 21
    DIV                            shift and go to state 22
    DIV_ext                        shift and go to state 23
    len                            shift and go to state 35

state 1

    (0) S' -> segment .



state 2

    (1) segment -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (46) assignment -> . VARIABLE = term
    (47) assignment -> . VARIABLE = array
    (48) assignment -> . array_term = term
    (49) assignment -> . VARIABLE + = term
    (50) assignment -> . array_term + = term
    (51) assignment -> . VARIABLE - = term
    (52) assignment -> . array_term - = term
    (53) assignment -> . VARIABLE * = term
    (54) assignment -> . array_term * = term
    (55) assignment -> . VARIABLE / = term
    (56) assignment -> . array_term / = term
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (68) print -> . PRINT ( pcontent )
    (29) if -> . IF ( condition ) { statements }
    (30) else -> . ELSE { statements }
    (31) elif -> . ELIF ( condition ) { statements }
    (27) while -> . WHILE ( condition ) { statements }
    (26) break -> . BREAK
    (28) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (18) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (19) function -> . DEF VARIABLE ( ) { statements }
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )
    (16) return -> . RETURN
    (17) return -> . RETURN term
    (69) array_term -> . VARIABLE [ term ]
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (79) len -> . LEN ( VARIABLE )

    $end            reduce using rule 1 (segment -> statements .)
    VARIABLE        shift and go to state 16
    (               shift and go to state 24
    PRINT           shift and go to state 25
    IF              shift and go to state 26
    ELSE            shift and go to state 27
    ELIF            shift and go to state 28
    WHILE           shift and go to state 29
    BREAK           shift and go to state 30
    FOR             shift and go to state 31
    DEF             shift and go to state 32
    RETURN          shift and go to state 33
    NUMBER          shift and go to state 34
    LEN             shift and go to state 36

    statement                      shift and go to state 37
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    function                       shift and go to state 13
    runFunction                    shift and go to state 14
    return                         shift and go to state 15
    term                           shift and go to state 17
    array_term                     shift and go to state 18
    ADD                            shift and go to state 19
    SUB                            shift and go to state 20
    MUL                            shift and go to state 21
    DIV                            shift and go to state 22
    DIV_ext                        shift and go to state 23
    len                            shift and go to state 35

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    (               reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    ELIF            reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LEN             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    (               reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELIF            reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .
    (75) term -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    (               reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    ELSE            reduce using rule 5 (statement -> operation .)
    ELIF            reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    RETURN          reduce using rule 5 (statement -> operation .)
    NUMBER          reduce using rule 5 (statement -> operation .)
    LEN             reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)
    +               reduce using rule 75 (term -> operation .)
    -               reduce using rule 75 (term -> operation .)
    *               reduce using rule 75 (term -> operation .)
    /               reduce using rule 75 (term -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    (               reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    ELSE            reduce using rule 6 (statement -> print .)
    ELIF            reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> if .

    VARIABLE        reduce using rule 7 (statement -> if .)
    (               reduce using rule 7 (statement -> if .)
    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    ELSE            reduce using rule 7 (statement -> if .)
    ELIF            reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    DEF             reduce using rule 7 (statement -> if .)
    RETURN          reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)
    }               reduce using rule 7 (statement -> if .)


state 8

    (8) statement -> else .

    VARIABLE        reduce using rule 8 (statement -> else .)
    (               reduce using rule 8 (statement -> else .)
    PRINT           reduce using rule 8 (statement -> else .)
    IF              reduce using rule 8 (statement -> else .)
    ELSE            reduce using rule 8 (statement -> else .)
    ELIF            reduce using rule 8 (statement -> else .)
    WHILE           reduce using rule 8 (statement -> else .)
    BREAK           reduce using rule 8 (statement -> else .)
    FOR             reduce using rule 8 (statement -> else .)
    DEF             reduce using rule 8 (statement -> else .)
    RETURN          reduce using rule 8 (statement -> else .)
    NUMBER          reduce using rule 8 (statement -> else .)
    LEN             reduce using rule 8 (statement -> else .)
    $end            reduce using rule 8 (statement -> else .)
    }               reduce using rule 8 (statement -> else .)


state 9

    (9) statement -> elif .

    VARIABLE        reduce using rule 9 (statement -> elif .)
    (               reduce using rule 9 (statement -> elif .)
    PRINT           reduce using rule 9 (statement -> elif .)
    IF              reduce using rule 9 (statement -> elif .)
    ELSE            reduce using rule 9 (statement -> elif .)
    ELIF            reduce using rule 9 (statement -> elif .)
    WHILE           reduce using rule 9 (statement -> elif .)
    BREAK           reduce using rule 9 (statement -> elif .)
    FOR             reduce using rule 9 (statement -> elif .)
    DEF             reduce using rule 9 (statement -> elif .)
    RETURN          reduce using rule 9 (statement -> elif .)
    NUMBER          reduce using rule 9 (statement -> elif .)
    LEN             reduce using rule 9 (statement -> elif .)
    $end            reduce using rule 9 (statement -> elif .)
    }               reduce using rule 9 (statement -> elif .)


state 10

    (10) statement -> while .

    VARIABLE        reduce using rule 10 (statement -> while .)
    (               reduce using rule 10 (statement -> while .)
    PRINT           reduce using rule 10 (statement -> while .)
    IF              reduce using rule 10 (statement -> while .)
    ELSE            reduce using rule 10 (statement -> while .)
    ELIF            reduce using rule 10 (statement -> while .)
    WHILE           reduce using rule 10 (statement -> while .)
    BREAK           reduce using rule 10 (statement -> while .)
    FOR             reduce using rule 10 (statement -> while .)
    DEF             reduce using rule 10 (statement -> while .)
    RETURN          reduce using rule 10 (statement -> while .)
    NUMBER          reduce using rule 10 (statement -> while .)
    LEN             reduce using rule 10 (statement -> while .)
    $end            reduce using rule 10 (statement -> while .)
    }               reduce using rule 10 (statement -> while .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    (               reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    ELSE            reduce using rule 11 (statement -> break .)
    ELIF            reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    DEF             reduce using rule 11 (statement -> break .)
    RETURN          reduce using rule 11 (statement -> break .)
    NUMBER          reduce using rule 11 (statement -> break .)
    LEN             reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (12) statement -> for .

    VARIABLE        reduce using rule 12 (statement -> for .)
    (               reduce using rule 12 (statement -> for .)
    PRINT           reduce using rule 12 (statement -> for .)
    IF              reduce using rule 12 (statement -> for .)
    ELSE            reduce using rule 12 (statement -> for .)
    ELIF            reduce using rule 12 (statement -> for .)
    WHILE           reduce using rule 12 (statement -> for .)
    BREAK           reduce using rule 12 (statement -> for .)
    FOR             reduce using rule 12 (statement -> for .)
    DEF             reduce using rule 12 (statement -> for .)
    RETURN          reduce using rule 12 (statement -> for .)
    NUMBER          reduce using rule 12 (statement -> for .)
    LEN             reduce using rule 12 (statement -> for .)
    $end            reduce using rule 12 (statement -> for .)
    }               reduce using rule 12 (statement -> for .)


state 13

    (13) statement -> function .

    VARIABLE        reduce using rule 13 (statement -> function .)
    (               reduce using rule 13 (statement -> function .)
    PRINT           reduce using rule 13 (statement -> function .)
    IF              reduce using rule 13 (statement -> function .)
    ELSE            reduce using rule 13 (statement -> function .)
    ELIF            reduce using rule 13 (statement -> function .)
    WHILE           reduce using rule 13 (statement -> function .)
    BREAK           reduce using rule 13 (statement -> function .)
    FOR             reduce using rule 13 (statement -> function .)
    DEF             reduce using rule 13 (statement -> function .)
    RETURN          reduce using rule 13 (statement -> function .)
    NUMBER          reduce using rule 13 (statement -> function .)
    LEN             reduce using rule 13 (statement -> function .)
    $end            reduce using rule 13 (statement -> function .)
    }               reduce using rule 13 (statement -> function .)


state 14

    (14) statement -> runFunction .
    (78) term -> runFunction .

    VARIABLE        reduce using rule 14 (statement -> runFunction .)
    (               reduce using rule 14 (statement -> runFunction .)
    PRINT           reduce using rule 14 (statement -> runFunction .)
    IF              reduce using rule 14 (statement -> runFunction .)
    ELSE            reduce using rule 14 (statement -> runFunction .)
    ELIF            reduce using rule 14 (statement -> runFunction .)
    WHILE           reduce using rule 14 (statement -> runFunction .)
    BREAK           reduce using rule 14 (statement -> runFunction .)
    FOR             reduce using rule 14 (statement -> runFunction .)
    DEF             reduce using rule 14 (statement -> runFunction .)
    RETURN          reduce using rule 14 (statement -> runFunction .)
    NUMBER          reduce using rule 14 (statement -> runFunction .)
    LEN             reduce using rule 14 (statement -> runFunction .)
    $end            reduce using rule 14 (statement -> runFunction .)
    }               reduce using rule 14 (statement -> runFunction .)
    +               reduce using rule 78 (term -> runFunction .)
    -               reduce using rule 78 (term -> runFunction .)
    *               reduce using rule 78 (term -> runFunction .)
    /               reduce using rule 78 (term -> runFunction .)


state 15

    (15) statement -> return .

    VARIABLE        reduce using rule 15 (statement -> return .)
    (               reduce using rule 15 (statement -> return .)
    PRINT           reduce using rule 15 (statement -> return .)
    IF              reduce using rule 15 (statement -> return .)
    ELSE            reduce using rule 15 (statement -> return .)
    ELIF            reduce using rule 15 (statement -> return .)
    WHILE           reduce using rule 15 (statement -> return .)
    BREAK           reduce using rule 15 (statement -> return .)
    FOR             reduce using rule 15 (statement -> return .)
    DEF             reduce using rule 15 (statement -> return .)
    RETURN          reduce using rule 15 (statement -> return .)
    NUMBER          reduce using rule 15 (statement -> return .)
    LEN             reduce using rule 15 (statement -> return .)
    $end            reduce using rule 15 (statement -> return .)
    }               reduce using rule 15 (statement -> return .)


state 16

    (46) assignment -> VARIABLE . = term
    (47) assignment -> VARIABLE . = array
    (49) assignment -> VARIABLE . + = term
    (51) assignment -> VARIABLE . - = term
    (53) assignment -> VARIABLE . * = term
    (55) assignment -> VARIABLE . / = term
    (20) runFunction -> VARIABLE . ( runFunctionTerms )
    (21) runFunction -> VARIABLE . ( )
    (69) array_term -> VARIABLE . [ term ]
    (73) term -> VARIABLE .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    =               shift and go to state 38
    +               shift and go to state 39
    -               shift and go to state 40
    *               shift and go to state 41
    /               shift and go to state 42
    (               shift and go to state 43
    [               shift and go to state 44

  ! +               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! -               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! *               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! /               [ reduce using rule 73 (term -> VARIABLE .) ]


state 17

    (63) ADD -> term . + term
    (64) SUB -> term . - term
    (65) MUL -> term . * term
    (66) DIV -> term . / term
    (67) DIV_ext -> term . / / term

    +               shift and go to state 45
    -               shift and go to state 46
    *               shift and go to state 47
    /               shift and go to state 48


state 18

    (48) assignment -> array_term . = term
    (50) assignment -> array_term . + = term
    (52) assignment -> array_term . - = term
    (54) assignment -> array_term . * = term
    (56) assignment -> array_term . / = term
    (76) term -> array_term .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    =               shift and go to state 49
    +               shift and go to state 50
    -               shift and go to state 51
    *               shift and go to state 52
    /               shift and go to state 53
